#54 Can create article under the name of the Workgroup
